--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,48 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.moomoo</groupId>
-    <artifactId>Endecrypter</artifactId>
+    <artifactId>endecrypter</artifactId>
     <version>1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <logback.version>1.2.3</logback.version>
+        <junit.version>4.13.2</junit.version>
     </properties>
 
+    <dependencies>
+        <!-- Command parse -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok.test</groupId>
+            <artifactId>test-maven-lombok</artifactId>
+            <version>1.18.20.0</version>
+        </dependency>
+        <!-- unit test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
